k8s/fraud-detection-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-detection-deployment
  labels:
    app: fraud-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-detection
  template:
    metadata:
      labels:
        app: fraud-detection
    spec:
      containers:
        - name: fraud-detection
          image: sand1k/mlops-fraud-detection-app:latest
          ports:
            - containerPort: 8000
