k8s/fraud-detection-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-service
  labels:
    app: fraud-detection
spec:
  selector:
    app: fraud-detection
  ports:
    - name: fraud-detection
      protocol: TCP
      port: 8000
