k8s/fraud-detection-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-detection-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fraud-detection-service
                port:
                  number: 8000
